--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "reprograma-praquemdoar",
   "version": "1.0.0",
   "description": "O Projeto Final tem como objetivo colocar em prática os conhecimentos obtidos durante as 18 semanas de imersão em Back-end da [{reprograma}](https://reprograma.com.br/).",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
